Write new backup imports as RelayImport
